bugfix: wrong font-family

--- a/style.css
+++ b/style.css
@@ -10,12 +10,7 @@
     --color-text: #000000;
     --color-text-header: #ffffff;
 
-    --font-family-normal: 'Verdana';
-    --font-weight-normal: 'Verdana';
-    --font-family-bold: 'HelveticaNeueMedium, HelveticaNeue-Medium, Helvetica Neue Medium, HelveticaNeue, Helvetica Neue';
-    --font-weight-bold: 600;
-    --font-family-bolder: 'Verdana';
-    --font-weight-bolder: 'Verdana';
+    --font-family: 'Verdana';
     --font-size-normal: 20px;
     --font-size-small: 16px;
     --font-size-tags: 10px;
